# simple-ecs

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
asset/shader/: shader.frag  shader.vert
cmake/: fetched-libs.cmake
include/ecs/: common.hpp  component_array.hpp  component_manager.hpp  concepts.hpp  coordinator.hpp  entity_manager.hpp  signature_mapper.hpp  system_manager.hpp
include/ecs/util/: common.hpp  concepts.hpp  fixed_array.hpp  meta.hpp  traits.hpp
source/: debug.hpp  ecs_config.hpp  main.cpp  nexus.hpp
source/component/: camera.hpp  gravity.hpp  player.hpp  renderable.hpp  rigid_body.hpp  thrust.hpp  transform.hpp
source/ecs/: common.hpp  component_array.hpp  component_manager.hpp  concepts.hpp  config.hpp  coordinator.hpp  entity_manager.hpp  signature_mapper.hpp  system_manager.hpp
source/graphics/: cube_primitive.hpp  shader.hpp
source/system/: camera_control_system.cpp  camera_control_system.hpp  physics_system.cpp  physics_system.hpp  render_system.cpp  render_system.hpp
source/util/: common.hpp  concepts.hpp  fixed_array.hpp  traits.hpp
